The plugin runs well now. * moved some xwork action to the correct location * remove some provided dependencies

--- a/greenpaper-confluence/greenpaper-confluence5-plugin/src/main/resources/templates/greenpepper/confluence/execution/header.vm
+++ b/greenpaper-confluence/greenpaper-confluence5-plugin/src/main/resources/templates/greenpepper/confluence/execution/header.vm
@@ -1,3 +1,8 @@
+<html>
+  <head>
+  </head>
+  <body>
+  
 <div class="conf_pageGPHeaderItem">
 	<table width="100%" cellpadding="0" cellspacing="0">
 		<tr>
@@ -72,3 +77,5 @@
 	#elseif($action.retrieveBody)<script language="JavaScript" type="text/javascript">conf_greenPepper.getSpecification('$action.bulkUID', '$action.executionUID', '$action.fieldId').retrieveBody(false);</script>
 	#end
 #end
+</body>
+</html>
