Fill the blanks and put some archived documentation online again

--- a/components/documentation/confluence-plugin.html
+++ b/components/documentation/confluence-plugin.html
@@ -1,4 +1,4 @@
-
+<div id="confluence-imported-doc">
 <div class="wiki-content">
 	<!-- wiki content -->
 	<h1 id="FullConfluencepluginguide-HTML-FullConfluencepluginguide">Full Confluence plugin guide</h1>
@@ -1860,4 +1860,5 @@ greenpepper-open:greenpepper-extensions-db:[2.7,)</pre>
 		Base Url configured in Confluence's General Configuration. A common case of this is when GreenPepper is installed on a local machine. We suggest you use the name of your local machine (http: //<font
 			color="blue"><b>mymachine</b></font>:8080/accept) instead of localhost in the URL (e.g. http: //<font color="red"><b>localhost</b></font>:8080/accept).
 	</p>
+</div>
 </div>
