--- a/components/documentation/developers-guide.html
+++ b/components/documentation/developers-guide.html
@@ -1,8 +1,8 @@
-     
+<div id="confluence-imported-doc">
                             <div class="wiki-content">
                                <!-- wiki content -->
             <h1 id="Fulldeveloperguide-HTML-Fulldeveloperguide">Full developer guide </h1>
-<h1 id="Fulldeveloperguide-HTML-1.FixturesConventions">1. Fixtures Conventions</h1>
+<h1 id="1FixturesConventions">1. Fixtures Conventions</h1>
 <h3 id="Fulldeveloperguide-HTML-Introduction">Introduction</h3>
 
 <p>Even though one of the objectives of <gpname>GreenPepper</gpname> is to create a common language between the business experts and the development team, there will always be a certain degree of difference between the natural language and the programing language.</p>
@@ -3089,3 +3089,4 @@ namespace GreenPepper.WindsorCastle
 }</pre>
 </div></div>
                             </div>
+</div>
