--- a/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/confluence/themes/greenpepper-theme-css.vm
+++ b/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/confluence/themes/greenpepper-theme-css.vm
@@ -3,13 +3,39 @@ body {
 }
 
 #if (${greenPepper.isConfluenceMajorVersionGreaterOrEqualThan_2_8()})
-#user-control-panel {
+\#user-control-panel {
 	display: none;
 }
 
-#sidebar {
+\#sidebar {
 	clear: right;
 	float: right;
 	width: 20em;
 }
 #end
+
+\#breadcrumbs {
+    padding: 0;
+    margin: 0;
+    font-size: 0;
+}
+
+\#breadcrumbs li {
+    display: inline-block;
+    font-size: 14px;
+    color: #333;
+}
+
+\#breadcrumbs li:before {
+    content: "/";
+    display: inline-block;
+    padding: 0 2px 0 6px;
+}
+
+\#breadcrumbs li:first-child:before {
+    display: none;
+}
+
+\#ellipsis {
+    cursor: pointer;
+}
