Add more information in confluence5 greenpepper-include macro in case of Page Not Found

--- a/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/confluence/macros/greenPepperMacros-error.vm
+++ b/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/confluence/macros/greenPepperMacros-error.vm
@@ -4,7 +4,7 @@
 	</tr>
 	<tr>
 		<td id="conf_macroErrMsg" class="conf_macroErrMsg">
-			$greenPepper.getText($macroId)<br>
+			$greenPepper.getText($macroId) $errorMessage<br>
 			$greenPepper.getText($errorId)
 		</td>
 	</tr>
