--- a/components/documentation/faq.html
+++ b/components/documentation/faq.html
@@ -1,17 +1,29 @@
 <div>
-	<div class="faq">
-		<h2 class="question">I have migrated from confluence 3 to confluence 5. Since then, my fixtures are not found, why?</h2>
-		<blockquote class="answer">
-			<p class="short">
-				Go to
-				<mark>[confluence_base_url]/admin/unmigratedwikicontent.action</mark>
-				and launch the migration of unmigrated pages
-			</p>
-			<p class="long">
-				During the migration process, when the targeted confluence version doesn't have the GreenPepper plugin installed, the page is not migrated (due to unknown macro). This is not visible to you
-				because the pages are surrounded by markups <b><mark>unmigrated-wiki-markup</mark></b>.<br /> Those markups keep the content of the page unmigrated by render the page correctly. Now, what is the
-				problem with GreenPepper ?<br /> The GreenPepper <mark>greenpepper-import</mark> macro changed between the two version and it needs to be upgraded. So you need to force the upgrade again.
-			</p>
-		</blockquote>
-	</div>
+    <div class="faq">
+        <h2 class="question">I have migrated from confluence 3 to confluence 5. Since then, my fixtures are not found, why?</h2>
+        <blockquote class="answer">
+            <p class="short">
+            Go to
+            <mark>[confluence_base_url]/admin/unmigratedwikicontent.action</mark>
+            and launch the migration of unmigrated pages
+            </p>
+            <p class="long">
+            During the migration process, when the targeted confluence version doesn't have the GreenPepper plugin installed, the page is not migrated (due to unknown macro). This is not visible to you
+            because the pages are surrounded by markups <b><mark>unmigrated-wiki-markup</mark></b>.<br /> Those markups keep the content of the page unmigrated by render the page correctly. Now, what is the
+            problem with GreenPepper ?<br /> The GreenPepper <mark>greenpepper-import</mark> macro changed between the two version and it needs to be upgraded. So you need to force the upgrade again.
+            </p>
+        </blockquote>
+    </div>
+    <div class="faq">
+        <h2 class="question">On confluence 5, I have an error talking about CDATA, why ?</h2>
+        <blockquote class="answer">
+            <p class="short">
+            You need to replace the {code} macro in you page with {noformat}.
+            </p>
+            <p class="long">
+            Confluence 5 creates a complex structure to be able to handle the code syntax highlighting. That stuctrure inserts a CDATA block in the page. That is normal, HTML speaking.
+            However Greenpepper tries to send the output page in an XML report. That page is included in a CDATA. What creates the problem is that a CDATA is forbidden inside a CDATA.
+            </p>
+        </blockquote>
+    </div>
 </div>
