--- a/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/configuration/installation/configurationDbmsEdit.vm
+++ b/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/configuration/installation/configurationDbmsEdit.vm
@@ -1,52 +1,51 @@
 #if (!$action.actionErrors.isEmpty())
-	<div id="dbmsEdit_errMsg" class="gpErrMsg">
+	<div id="dbmsEdit_errMsg" class="aui-message aui-message-error">
+		<ul>
 		#foreach($error in $action.actionErrors)
-			<span>$action.getText($error)</span><br>
+			<li>$action.getText($error)</li>
 		#end
+		</ul>
 	</div>
 #end
-<table class="sp_configItemView" cellspacing="0" cellpadding="0">
-	<tr>
-		<td class="sp_configSubTitle">
-			<img src="$req.contextPath/download/resources/com.greenpepper.confluence.plugin:greenpepper.configuration/images/greenpepper_12.gif" alt="" border="0">
-			$action.getText('greenpepper.install.dbms')
-		</td>
-		<td class="sp_configInput">
-			#if($action.isCustomSetup())
-				<select id="dbms">
-					#foreach($dialect in $action.dialects)
-						<option value="$dialect.className" class="sp_configSelectOption" #if($!action.hibernateDialect && $dialect.className.equals($!action.hibernateDialect)) selected #end>$dialect&nbsp;&nbsp;&nbsp;</option>
-					#end
-				</select>
-			#else
-				HSQL
-			#end
-		</td>
-		<td class="sp_configTxt" rowspan="2">
-			#if($action.isCustomSetup())
-				<span id="dbmsEdit_updateCustom" class="sp_configLinks" onclick="gpProperties.updateCustomDbmsConfiguration();">$action.getText('greenpepper.configuration.save')</span>
-			#else
-				<span id="dbmsEdit_updateQuick" class="sp_configLinks" onclick="gpProperties.updateQuickDbmsConfiguration();">$action.getText('greenpepper.configuration.save')</span>
-			#end
-			|
-			<span id="dbmsEdit_cancel" class="sp_configLinks" onclick="updateTabsUI(this);gpProperties.getDbmsConfigPane();">$action.getText('greenpepper.configuration.cancel')</span>
-			#if($action.isCustomSetup())
-				|
-				<span id="dbsmEdit_test" class="sp_configLinks" onclick="gpProperties.testDbmsConnection();">$action.getText('greenpepper.configuration.testconnection')</span>
-				<span id="testConnection_display"></span>
-			#end
-		</td>
-	</tr>
+<div class="sp_configItemView">
+	<div class="field-group">
+		<label for="dbms">$action.getText('greenpepper.install.dbms')</label>
+		#if($action.isCustomSetup())
+			<select id="dbms" class="select">
+				#foreach($dialect in $action.dialects)
+					<option value="$dialect.className" class="sp_configSelectOption" #if($!action.hibernateDialect && $dialect.className.equals($!action.hibernateDialect)) selected #end>$dialect&nbsp;&nbsp;&nbsp;</option>
+				#end
+			</select>
+		#else
+			<select id="dbms" class="select" disabled>
+				<option selected>HSQL</option>
+			</select>
+		#end
+	</div>
 	#if($action.isCustomSetup())
-		<tr>
-			<td class="sp_configSubTitle">
-				<img src="$req.contextPath/download/resources/com.greenpepper.confluence.plugin:greenpepper.configuration/images/greenpepper_12.gif" alt="" border="0">
-				$action.getText('greenpepper.install.jndiurl')
-			</td>
-			<td class="sp_configInput" colspan="2">
-				<input id="jndi_txtfield" class="sp_configInput" value="$!action.jndiUrl" size="35"/>
-				<span class="sp_configMandatory" title="$action.getText('greenpepper.install.dbms.mandatorytxt')">$action.getText('greenpepper.install.dbms.mandatory')<span>
-			</td>
-		</tr>
+	<div class="field-group">
+		<label for="jndi_txtfield">
+			$action.getText('greenpepper.install.jndiurl') <span class="aui-icon icon-required">(required)</span>
+		</label>
+		<input id="jndi_txtfield" class="text medium-long-field" value="$!action.jndiUrl"/>
+		<div class="description">
+			<p>$action.getText('greenpepper.install.dbms.mandatorytxt')</p>
+		</div>
+	</div>
 	#end
-</table>
+	<div class="buttons-container">
+       	<div class="buttons" style="float: right;">
+		#if($action.isCustomSetup())
+			<button id="dbmsEdit_updateCustom" class="aui-button" onclick="gpProperties.updateCustomDbmsConfiguration();">$action.getText('greenpepper.configuration.save')</button>
+		#else
+			<button id="dbmsEdit_updateQuick" class="aui-button" onclick="gpProperties.updateQuickDbmsConfiguration();">$action.getText('greenpepper.configuration.save')</button>
+		#end
+		
+		<button id="dbmsEdit_cancel" class="aui-button" onclick="gpProperties.getDbmsConfigPane();">$action.getText('greenpepper.configuration.cancel')</button>
+		#if($action.isCustomSetup())
+			<button id="dbsmEdit_test" class="aui-button" onclick="gpProperties.testDbmsConnection();">$action.getText('greenpepper.configuration.testconnection')</button>
+			<span id="testConnection_display"></span>
+		#end
+		</div>
+	</div>
+</div>
