Update the download page documentation

--- a/components/documentation/remote-agent.html
+++ b/components/documentation/remote-agent.html
@@ -24,7 +24,7 @@
 		<p>
 			The
 			<gpname>GreenPepper</gpname>
-			remote agent is a simple executable java application that can be found <a href="/web/20120710022929/http://www.greenpeppersoftware.com/confluence/display/GPW/Download" title="Download">here</a>.
+			remote agent is a simple executable java application that can be found <a href="#/downloads" title="Download">here</a>.
 		</p>
 		<ol>
 			<li>Copy the remote agent Jar file on the machine where your GreenPepper Server will sends its remotes executions.</li>
@@ -49,17 +49,9 @@
 </pre>
 			</div>
 		</div>
-		<table cellpadding='5' width='85%' cellspacing='8px' class='infoMacro' border="0" align='center'>
-			<colgroup>
-				<col width='24'>
-				<col>
-			</colgroup>
-			<tr>
-				<td valign='top'><img src="/web/20120710022929im_/http://www.greenpeppersoftware.com/confluence/images/icons/emoticons/information.gif" width="16" height="16" align="absmiddle" alt=""
-					border="0"></td>
-				<td><b class="strong">By default, the Remote Agent is listening on port 56000</b><br /></td>
-			</tr>
-		</table>
+        <div class="alert alert-info">
+        By default, the Remote Agent is listening on port 56000
+        </div>
 
 		<h3 id="RemoteAgent-Securedmode">Secured mode</h3>
 
