--- a/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/configuration/poweredByGPFooter.vm
+++ b/confluence/greenpepper-confluence-plugin/src/main/resources/templates/greenpepper/configuration/poweredByGPFooter.vm
@@ -8,7 +8,7 @@
 			<span id="systemError_display" class="gpSmallErrMsg" style="display:none;">$action.getText('greenpepper.properties.systemerror')</span>
 		</td>
 		<td class="sp_powered">
-			<span class="sp_powered">$action.getText('greenpepper.properties.poweredby')</span>&nbsp;<a href="http://www.greenpeppersoftware.com" target="_blank"><img src="$req.contextPath/download/resources/com.greenpepper.confluence.plugin:greenpepper.configuration/images/greenpepper_logo.gif" class="centeredImage" alt="" border="0"></a>
+			<span class="sp_powered">$action.getText('greenpepper.properties.poweredby')</span>&nbsp;<a href="http://strator-dev.github.io/greenpepper/" target="_blank"><img src="$req.contextPath/download/resources/com.greenpepper.confluence.plugin:greenpepper.configuration/images/greenpepper_logo.gif" class="centeredImage" alt="" border="0"></a>
 		</td>
 	</tr>
 </table>
